# CAVA

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  NM.gpc.xml  NM2NP.bash  README  README.build  README.md  SampleAll_diff.edited.txt  SampleAll_diff.txt  cava.ids  cava.ids.2NP.txt  cavaconfig.GRCh38.txt  config_template.txt  csn.py  customdb_prep.py  initialize.bash  install.bash  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.OUT.vcf  test.sh  tox.ini
cava/: CAVA.py  CHANGELOG  EnsemblDB.py  MANE.py  RefSeqDB.py  VERSION  dbSNPDB.py  pyvenv.cfg  test_end2end_out.vcf  testplink-temporary.fam
cava/data/: ENST75_GRCh37.gz.tbi  ENST75_GRCh37.txt  MANE.GRCh38.v1.0.refseq_genomic.db.gz.tbi  MANE.GRCh38.v1.0.refseq_genomic.txt  MANE.GRCh38.v1.1.refseq_genomic.db.gz.tbi  MANE.GRCh38.v1.1.refseq_genomic.txt  RefSeq_small.gz.tbi  RefSeq_small.txt  RefSeq_small_failed_conversions.pkl  cava_db.GRCh38.MANE.sorted.gz.tbi  cava_db.GRCh38.MANE.sorted.txt
cava/ensembldb/: README.md  SECIS_in_refseq_pos.homo_sapiens.refseq_GRCh37.txt  SECIS_in_refseq_pos.txt  Special_categories.txt  all_pmids_stats.txt  all_submitters_stats.txt  all_traits_stats.txt  allele_id_stats.txt  alt_stats.txt  benign_stats.txt  chrom_stats.txt  clinical_significance_ordered_stats.txt  clinical_significance_stats.txt  conflicted_stats.txt  create_selenodata.py  dates_ordered_stats.txt  disease_mechanism_stats.txt  ensembl_refseq_GRCh38_111.txt  ensembls.alt  ensemblsids_with_only_genes_in_alt.txt  gold_stars_stats.txt  hgvs_c_stats.txt  hgvs_p_stats.txt  last_evaluated_stats.txt  likely_benign_stats.txt  likely_pathogenic_stats.txt  main.py  main_refseq.py  mane_db_prep.py  molecular_consequence_stats.txt  origin_stats.txt  pathogenic_stats.txt  pos_stats.txt  rcv_stats.txt  ref_stats.txt  refseq_and_AApos_stats.txt  refseqs_alt  review_status_ordered_stats.txt  review_status_stats.txt  scv_stats.txt  (+10 more)
cava/ensembldb/old/: SECIS_in_refseq_pos.homo_sapiens.ensembl_GRCh37_75.txt  SECIS_in_refseq_pos.homo_sapiens.ensembl_GRCh38.txt  SECIS_in_refseq_pos.homo_sapiens.refseq_GRCh38.txt
cava/test/: CAVA_config_10.txt  CAVA_config_3.txt  CAVA_config_4.txt  CustomTX2.txt  Inclinvar_patho_not_cava_inMANE.vcf  cava.config.hg19.GCP.mforge.txt  dot_slash1.expected.vcf  dot_slash1.vcf  hashes.txt  test.sh  test_csn.py  test_end2end.py  test_end2end.vcf  test_end2end_hg19.py  tmpB.vcf.expected
cava/utils/: conseq.py  core.py  csn.py  data.py  indelnormalize.py  main.py
cava_/: conseq.py  core.py  csn.py  data.py  helper.py  main.py  test_csn.py
data/: RefSeq_small.gz.tbi  RefSeq_small.txt
defaultdb/: cava_db.gz.tbi  ensembl75s.txt
ensembldb/: README.md  main.py  main_refseq.py  mane_db_prep.py
ensembldb/data/: MCG_transcripts.txt  info65.txt  info70.txt  info71.txt  info72.txt  info73.txt  info74.txt
test/: CAVA_config_1.txt  CAVA_config_10.txt  CAVA_config_11.txt  CAVA_config_12.txt  CAVA_config_2.txt  CAVA_config_3.txt  CAVA_config_4.txt  CAVA_config_5.txt  CAVA_config_6.txt  CAVA_config_7.txt  CAVA_config_8.txt  CAVA_config_9.txt  CustomTX.txt  CustomTX2.txt  SampleAll.vcf  SampleAll_out.vcf  hashes.txt  integration_test_278.newout.txt  integration_test_278.newout.vcf  integration_test_278.oldout.txt  integration_test_278.sorted.orig.OUT.vcf  integration_test_278.sorted.out.vcf  integration_test_278.sorted.vcf  integration_test_278.vcf  test.GRCh37.vcf  test.GRCh38.vcf  test.sh  test_csn.py  test_end2end.py  test_large.vcf.REMOVED.git-id  tmp1.vcf.expected  tmp2.vcf.expected  tmp3.vcf.expected  tmp4.vcf.expected  tmpA.vcf.expected  tmpB.vcf.expected  tmpC.vcf.expected  tmpD.vcf.expected  tmp_a.vcf.expected  tmp_c.vcf.expected  (+1 more)
