[project]
name = "CAVA_sicotte"
version = "2.0.14"
authors = [
    {name="Steven-N-Hart",email="hart.steven@mayo.edu"},
    {name="Hugues-Sicotte", email="hugues.sicotte@gmail.com"}
] 
description = "CAVA: Clininical Annotation of VAriants"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
"Programming Language :: Python 3",
"Operating System :: OS Independent"]

[project.urls]
"Homepage" = "https://github.com/sicotteh/CAVA"
"Previous" = "https://github.com/Steven-N-Hart/CAVA"
[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
[tool.setuptools]
packages = ["cava"]
