[metadata]
    description_file = README.md
    name = CAVA
    version = 2.0.14
    description = "CAVA (Clinical Annotation of VAriants)"
    url = "https://github.com/sicotteh/CAVA"
    author = "Steven-N-Hart, Hugues-Sicotte"
    author_email = "hart.steven@mayo.edu, sicotte.hugues@mayo.edu"
    license = "MIT"
[options.package_data]
* = *.txt, *.config, *.bed, *.bgz, *.csv, *.tbi, *.fa, *.idx, *.tab, *.tsv, *.gz
requires = 
    Cython
    pybedtools
    pysam
    crossmap
    wget
    requests
    bx-python
    pyBigWig
    pybedtools
    numpy== 1.17.4
    certifi
    charset-normalizer
    idna
    six
    urllib3
    wget
    wheel
    pip

[options]
python_required = >=3.7
zip_safe = False
include_package_data = True

[options.extras_require]
tests = 
      wget
      pycurl >= 7.45.1

[bdist_wheel]
